--- a/ExSingleton/ExSingleton.vcxproj.filters
+++ b/ExSingleton/ExSingleton.vcxproj.filters
@@ -41,7 +41,7 @@
     <ClCompile Include="logout.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="ExSingleton.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
